--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
